testdata/baselines/reference/submodule/compiler/contravariantOnlyInferenceFromAnnotatedFunctionJs.errors.txt
index.js(11,15): error TS2304: Cannot find name 'A'.
index.js(11,18): error TS2304: Cannot find name 'B'.
index.js(13,14): error TS7006: Parameter 'fns' implicitly has an 'any' type.
index.js(14,3): error TS2322: Type 'null' is not assignable to type '[A, B]'.
index.js(21,8): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== index.js (5 errors) ====
    /**
     * @typedef {{ [K in keyof B]: { fn: (a: A, b: B) => void; thing: B[K]; } }} Funcs
     * @template A
     * @template {Record<string, unknown>} B
     */
    
    /**
     * @template A
     * @template {Record<string, unknown>} B
     * @param {Funcs<A, B>} fns
     * @returns {[A, B]}
                  ~
!!! error TS2304: Cannot find name 'A'.
                     ~
!!! error TS2304: Cannot find name 'B'.
     */
    function foo(fns) {
                 ~~~
!!! error TS7006: Parameter 'fns' implicitly has an 'any' type.
      return /** @type {any} */ (null);
      ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type '[A, B]'.
    }
    
    const result = foo({
      bar: {
        fn:
          /** @param {string} a */
          (a) => {},
           ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
        thing: "asd",
      },
    });